--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
 *.exe
 /.idea/.name
-/cmake-build-default/.ninja_deps
-/cmake-build-default/.ninja_log
-/cmake-build-default/build.ninja
-/cmake-build-default/.cmake/api/v1/query/cache-v2
-/cmake-build-default/.cmake/api/v1/reply/cache-v2-a4204e3c1975ac6caf88.json
-/cmake-build-default/CMakeFiles/clion-Default-log.txt
-/cmake-build-default/CMakeFiles/clion-environment.txt
-/cmake-build-default/CMakeFiles/cmake.check_cache
-/cmake-build-default/cmake_install.cmake
-/cmake-build-default/CMakeCache.txt
-/cmake-build-default/CMakeFiles/3.27.8/CMakeCCompiler.cmake
-/cmake-build-default/CMakeFiles/3.27.8/CompilerIdC/CMakeCCompilerId.c
-/cmake-build-default/CMakeFiles/CMakeConfigureLog.yaml
-/cmake-build-default/CMakeFiles/3.27.8/CMakeCXXCompiler.cmake
-/cmake-build-default/CMakeFiles/3.27.8/CompilerIdCXX/CMakeCXXCompilerId.cpp
-/cmake-build-default/CMakeFiles/3.27.8/CMakeDetermineCompilerABI_C.bin
-/cmake-build-default/CMakeFiles/3.27.8/CMakeDetermineCompilerABI_CXX.bin
-/cmake-build-default/.cmake/api/v1/query/cmakeFiles-v1
-/cmake-build-default/CMakeFiles/3.27.8/CMakeRCCompiler.cmake
-/cmake-build-default/CMakeFiles/3.27.8/CMakeSystem.cmake
-/cmake-build-default/.cmake/api/v1/query/codemodel-v2
-/cmake-build-default/.cmake/api/v1/reply/directory-.-d0094a50bb2071803777.json
-/cmake-build-default/Testing/Temporary/LastTest.log
-/.idea/misc.xml
-/cmake-build-default/CMakeFiles/rules.ninja
-/cmake-build-default/CMakeFiles/TargetDirectories.txt
-/cmake-build-default/.cmake/api/v1/query/toolchains-v1
-/cmake-build-default/.cmake/api/v1/reply/toolchains-v1-2f1b2a984015c5f11b41.json
+/cmake-build-default/*
